tests/frontend/pass/array/create.act
constructor of A
interface constructor(int x, uint[2][3] y, uint[2] z)


constructor of B
interface constructor()

creates
  A a := create A(-1, [ [1,2], [3,4], [5,6] ], [0,0])
  uint[2][2] arr := [[0,0],[0,0]]
  uint[2][1] y := [[0,0]]

behaviour f of B
interface f()

storage
  a => create A(2, [ [1,2], [3,4], [5,6] ], y[0])


