tests/frontend/fail/array/inconsistent_array_shape.act
constructor of B
interface constructor()

creates

  bytes1[2][2] n1 := [[1,2,3],[4,5]]
